@@ -1,3 +1,8 @@
+2004-11-02  Fernando Herrera  <set EMAIL_ADDRESS environment variable>
+
+	* gconf/gconf-sources.c: (gconf_sources_all_entries): Get schema_name
+	also if we got a value from a previous source. Fix #131011
+
 2004-10-12  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-release bump to 2.8.2.
